--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -4,7 +4,7 @@ div#reviewinfo {
 
 div#reviewContent {
   height: 300px;
-  border: 1px solid grey;
+  border: 2px solid #B3B3B3;
 }
 
 div#mainDiv {
@@ -17,7 +17,19 @@ div#icon {
 }
 
 #reviews {
-  height: 18.18%;
+  height: 100%;
+}
+
+.chel {
+  width: 14.1%;
+  text-align: left;
+  display: inline-block;
+  border: 2px solid #B3B3B3;
+}
+
+#reviews {
+  overflow-y: hidden;
+  padding-left: 5.7%;
 }
 
 /*# sourceMappingURL=normalUserReviewReadTemplate.css.map */
