--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -1,11 +1,10 @@
 {% extends 'normal_user_review_list.html' %}
 {% load index static %}
 {% block info %}
-    <link rel="stylesheet" href="{% static 'css/normalUserRoomReadTemplate.css' %}">
     <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ javakey|java_key }}&libraries=services&autoload=true"></script>
-<div id="reviewinfo" style = "height:32.8%; color: #B3B3B3;outline:2px;">
+<div id="reviewinfo" style = "height:32.8%; ">
     <div style ="margin:15px; height:100%">
         <div style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
                 <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
@@ -88,17 +87,23 @@
         </script>
     </div>
 </div>
-    <div id ="mid"style = "text-align:center;width:100%; height:48.9%;color:#B3B3B3">
-        <div style = "display: inline-block;text-align:left;padding: 1.85% 6.07% 1.85% 6.07%">
-            <div style = "">작성자 : </div><div style ="text-align: right;">주소  </div>
-            <div style="float:right;">        <div id = "retouch" >
-            <a style ="text-decoration: none; color:darkred;" href="javascript:(0)" onclick="document.getElementById('search_filter').submit();">수정</a>
-        </div></div>
-            <div>채광 ★5.0 방음 청결 습도</div>
-            <div>리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문</div>
-            <div>ㅇㅏㅇㅣㅋㅗㄴ</div>
-            <div>추천 수 :</div></ㅁ>
-            <div>신고버튼</div>
+    <div style = "text-align:center;width:100%; height:48.9%;outline: 2px solid #B3B3B3;">
+        <div class ="review_mid" style = " outline: 2px solid #B3B3B3;height:100%; display: inline-block;text-align:left;">
+            <div style = "float:left;">작성자 : </div>
+            <div id = "retouch" style ="float:right;" ><a style ="text-decoration: none; color:darkred;" href="javascript:(0)" onclick="">이동</a></div>
+            <div style ="display:inline-block;float: right; padding-right: 5%;">주소  </div>
+            <br><div style="outline: 2px solid #B3B3B3;font-weight: 600; font-size:170%; color:black;">리뷰 제목리뷰 제목리뷰 제목</div>
+            <div style="margin-top:0.3%;outline:2px solid #B3B3B3;width:15.1%; float:left; display:inline-block;">월세</div>
+            <div style="width:15.1%; text-align: left;display:inline-block;">크기 </div>
+            <div class = "chel">채광 </div>
+            <div style="width:15.1%; text-align: left;display:inline-block;">청결 </div>
+            <div class = "chel">온도 </div>
+            <div style="width:24.1%;display:inline-block;">습도 </div>
+            <div style = "width:100%;height:61.1%;outline:2px solid #B3B3B3;">리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문</div>
+            <div style = "float:left;width:77.1%; display:inline-block;">ㅇㅏㅇㅣㅋㅗㄴ</div>
+            <div style = "float:right;width:11%; display:inline-block;">신고버튼</div>
+            <div style = "float:right;width:11%; display:inline-block;">추천 수 :</div>
         </div>
     </div>
+    <link rel="stylesheet" href="{% static 'css/normalUserReviewReadTemplate.css' %}">
 {% endblock %}
