리뷰 검색 페이지, 열람 페이지 수정

--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -21,10 +21,11 @@ div#icon {
 }
 
 .chel {
-  width: 14.1%;
   text-align: left;
   display: inline-block;
   border: 2px solid #B3B3B3;
+  border-collapse: collapse;
+  float: left;
 }
 
 #reviews {
