--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -92,14 +92,16 @@
             <div style = "float:left;">작성자 : </div>
             <div id = "retouch" style ="float:right;" ><a style ="text-decoration: none; color:darkred;" href="javascript:(0)" onclick="">이동</a></div>
             <div style ="display:inline-block;float: right; padding-right: 5%;">주소  </div>
-            <br><div style="outline: 2px solid #B3B3B3;font-weight: 600; font-size:170%; color:black;">리뷰 제목리뷰 제목리뷰 제목</div>
-            <div style="margin-top:0.3%;outline:2px solid #B3B3B3;width:15.1%; float:left; display:inline-block;">월세</div>
-            <div style="width:15.1%; text-align: left;display:inline-block;">크기 </div>
-            <div class = "chel">채광 </div>
-            <div style="width:15.1%; text-align: left;display:inline-block;">청결 </div>
-            <div class = "chel">온도 </div>
-            <div style="width:24.1%;display:inline-block;">습도 </div>
-            <div style = "width:100%;height:61.1%;outline:2px solid #B3B3B3;">리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문</div>
+            <br><div style="border: 2px solid #B3B3B3;font-weight: 600; font-size:170%; color:black;">리뷰 제목리뷰 제목리뷰 제목</div>
+            <div style="border: 2px solid #B3B3B3; border-collapse:collapse;height:30px;">
+                <div class="col-2 chel" style="display:inline-block;">월세</div>
+                <div class="col-2 chel" style="text-align: left;float:left; display:inline-block;">크기 </div>
+                <div class = "col-2 chel">채광 </div>
+                <div class="col-2 chel" style="text-align: left;display:inline-block;float:left;">청결 </div>
+                <div class = "col-2 chel">온도 </div>
+                <div class="col-2 chel" style="display:inline-block;float:left;">습도 </div>
+            </div>
+            <div style = "width:100%;height:55.1%;border:2px solid #B3B3B3;border-collapse:collapse;">리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문</div>
             <div style = "float:left;width:77.1%; display:inline-block;">ㅇㅏㅇㅣㅋㅗㄴ</div>
             <div style = "float:right;width:11%; display:inline-block;">신고버튼</div>
             <div style = "float:right;width:11%; display:inline-block;">추천 수 :</div>
