--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -7,122 +7,22 @@
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ javakey|java_key }}&libraries=services&autoload=true"></script>
 
-    {% if request.path == normalUserReviewRead %}
+<div id="reviewinfo" style = "height:32.8%; ">
+    <div style ="margin:15px; height:100%">
+        <div style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
+                <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
+        </div>
+        <div id="mapDiv" style = "display:inline-block;"></div>
+        <script type="text/javascript" src="{% static 'js/normalUserReviewReadTemplate.js' %}"></script>
         <script>
-            window.onpageshow = function (event) {
-                if (event.persisted) {
-                    document.location.reload();
-                }
-            };
-            var recommended = '{{recommended}}';
-            if (recommended === 'None' || recommended === '')
-                recommended = false;
-            var reported = '{{reported}}';
-            if (reported === 'None' || recommended === '')
-                reported = false;
-            var reviewNum = '{{review.id}}';
-            var recommendImg = "{% static 'images/iconImage/recommend.png' %}";
-            var recommendedImg = "{% static 'images/iconImage/recommended.png' %}";
-            var reportImg = "{% static 'images/iconImage/report.png' %}";
-            var reportedImg = "{% static 'images/iconImage/reported.png' %}";
-            var icons = {{icons}};
-        </script>
-    {% endif %}
-    {% if user.is_anonymous %}
-        <script>
-            let userloggedin = false;
-        </script>
-    {% else %}
-        <script>
-            let userloggedin = true;
-        </script>
-    {% endif %}
-    <link rel="stylesheet" href="{% static 'css/normalUserReviewReadTemplate.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
-    <script src="https://cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    <div>
-        <div id="reviewInfo">
-            <div id="room_images" class="content col-5"
-                 style="display:inline-block; float:left; height:200px; border:1px solid black;">
-            {% if review.additionalImage %}
-                <div class="slider" id="famous" onclick="">
-                    {% for reviewimg in review.additionalImage %}
-                        <img src="{% static 'images/' %}{{ reviewimg }}" style="height:100% ; width:100%;">
-                    {% endfor %}
-                </div>
-            {% else %}
-                <div>등록된 사진이 없습니다</div>
-            {% endif %}
-
-            </div>
-
-            <div class="content col-5" style="display:inline-block; float:left; height:200px; border:1px solid black;">
-                <h1>{{ review.reviewTitle }}</h1>
-                <p>작성자 닉네임 : {{ review.uNickname }}</p>
-                <p>작성자 email : {{ review.uEmail }}</p>
-                <p>작성일 : {{ review.reviewDate }}</p>
-                <p>원룸 주소 : {{ review.address }}</p>
-            </div>
-            <div class="content col-2" style="display:inline-block; float:left; height:200px; border:1px solid black;">
-                <p>수정/삭제 버튼 놓을 곳</p>
-                <p style="font-size:25px;">
-                    {% if recommended %}
-                        <a onclick="toggleRecommend()" href="javascript:void(0);"><img id="rec"
-                                                                                       src="{% static 'images/iconImage/recommended.png' %}"></a>
-                    {% else %}
-                        <a onclick="toggleRecommend()" href="javascript:void(0);"><img id="rec"
-                                                                                       src="{% static 'images/iconImage/recommend.png' %}"></a>
-                    {% endif %}
-                    : <span id="recommend_num">{{ review.recommendedOn|length }}</span>
-                </p>
-                <p style="font-size:25px;">
-                    {% if reported %}
-                        <a onclick="toggleReport()" href="javascript:void(0);"><img id="rep"
-                                                                                    src="{% static 'images/iconImage/reported.png' %}"></a>
-                    {% else %}
-                        <a onclick="toggleReport()" href="javascript:void(0);"><img id="rep"
-                                                                                    src="{% static 'images/iconImage/report.png' %}"></a>
-                    {% endif %}
-                    : <span id="report_num">{{ review.reportedOn|length }}</span>
-                </p>
-            </div>
-        </div>
-        <div id="reviewContent" class="content col">
-            {% for s in review.reviewSentence %}
-                <p>{{ s }}</p>
-            {% endfor %}
-        </div>
-        <div id="icon">
-            <h1>아이콘</h1>
-            {% if icon %}
-                {% for i in icon %}
-                    <a onclick="selectIcon(this)">
-                        <img src="{% static 'images/iconImage/' %}{{i}}.png"  style="width:5%; height:10%;">
-                        <input type="text" hidden value="{% static 'images/iconImage/' %}{{i}}.png">
-                        <input type="text" hidden value="{% static 'images/iconImage/' %}{{i}}{{i}}.png">
-                        <input type="text" hidden value="{{i}}">
-                    </a>
-                {% endfor %}
-            {% else %}
-                <div>아이콘이 없습니다.</div>
-            {% endif %}
-        </div>
-        <div id="same_room_reviews">
-            <!-같은 원룸의 리뷰들 목록-->
-            <!-추천 순으로 약 5개만 출력-->
-        </div>
-        <div id="mapDiv"></div>
-    </div>
-    <script type="text/javascript" src="{% static 'js/normalUserReviewReadTemplate.js' %}"></script>
-    <script>
-        $(document).ready(function () {
-            var a = $('.slider').bxSlider({
-                {#maxSlides:4,#}
-                infiniteLoop: false,
-                touchEnabled: false,
+            $(document).ready(function () {
+                var a = $('.slider').bxSlider({
+                    {#maxSlides:4,#}
+                    infiniteLoop: false,
+                    touchEnabled: false,
+                });
             });
-        });
-    </script>
+        </script>
     <script type="text/javascript">
 
     // icon 이미지 <-> selected icon 이미지 변환 함수
