--- a/templates/normal_user_info_check.html
+++ b/templates/normal_user_info_check.html
@@ -104,8 +104,8 @@
                     추천 수 {{ review.recommendedOn|length }}</span>
                 <div style = "color: #ECECEC;">&ensp;
         {#            리뷰 내용 데이터 #}
-                    리뷰내용 -> {{ review.reviewSentence|index:0 }}</div>
-                <span style = "color : #A23355 ;font-size: 1.88vw; letter-spacing :1vw; ">&ensp;
+                      리뷰내용 -> {{ review.reviewSentence }}</div>
+                <span style = " letter-spacing : 1vw; position: relative; right:2.5%;">&ensp;
         {#            리뷰별 아이콘 데이터 목록 #}
                     {% if review.includedIcon %}
                         {% for icon in review.includedIcon %}
