--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -1,10 +1,13 @@
 {% extends 'normal_user_review_list.html' %}
 {% load index static %}
 {% block info %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
     <script type="text/javascript" src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <script type="text/javascript"
             src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ javakey|java_key }}&libraries=services&autoload=true"></script>
-<div id="reviewinfo" style = "height:32.8%; ">
+<div id="reviewHead" style = "height:32.8%; ">
     <div style ="margin:15px; height:100%">
         <div style="width:24.7%; height:90.7%; margin-right:20px; display: inline-block;float:left;">
                 <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
@@ -87,25 +90,81 @@
         </script>
     </div>
 </div>
-    <div style = "text-align:center;width:100%; height:48.9%;outline: 2px solid #B3B3B3;">
-        <div class ="review_mid" style = " outline: 2px solid #B3B3B3;height:100%; display: inline-block;text-align:left;">
-            <div style = "float:left;">작성자 : </div>
-            <div id = "retouch" style ="float:right;" ><a style ="text-decoration: none; color:darkred;" href="javascript:(0)" onclick="">이동</a></div>
-            <div style ="display:inline-block;float: right; padding-right: 5%;">주소  </div>
-            <br><div style="border: 2px solid #B3B3B3;font-weight: 600; font-size:170%; color:black;">리뷰 제목리뷰 제목리뷰 제목</div>
-            <div style="border: 2px solid #B3B3B3; border-collapse:collapse;height:30px;">
-                <div class="col-2 chel" style="display:inline-block;">월세</div>
-                <div class="col-2 chel" style="text-align: left;float:left; display:inline-block;">크기 </div>
-                <div class = "col-2 chel">채광 </div>
-                <div class="col-2 chel" style="text-align: left;display:inline-block;float:left;">청결 </div>
-                <div class = "col-2 chel">온도 </div>
-                <div class="col-2 chel" style="display:inline-block;float:left;">습도 </div>
-            </div>
-            <div style = "width:100%;height:55.1%;border:2px solid #B3B3B3;border-collapse:collapse;">리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문리뷰 본문</div>
-            <div style = "float:left;width:77.1%; display:inline-block;">ㅇㅏㅇㅣㅋㅗㄴ</div>
-            <div style = "float:right;width:11%; display:inline-block;">신고버튼</div>
-            <div style = "float:right;width:11%; display:inline-block;">추천 수 :</div>
+<div id="review_table">
+
+    <div id="row1">
+        <div id="writer">
+
+        </div>
+        <div style="height:100%; width:8.1%;"></div>
+        <div id="address">
+
+        </div>
+        <div id="room_read">
+
         </div>
     </div>
-    <link rel="stylesheet" href="{% static 'css/normalUserReviewReadTemplate.css' %}">
+    <div id="row2">
+        <div id="title">
+
+        </div>
+    </div>
+    <div id="row3">
+        <div style="width:14.82%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">월세</div></div>
+        <div style="width:13.834%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">크기</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">채광</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">청결</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">온도</div></div>
+        <div style="width:12.846%; border-right:2px solid #B3B3B3;"><div style="display: flex;width: 100%;height: 100%;align-items: center;">습도</div></div>
+        <div style="width:19.962%; height:100%;"></div>
+    </div>
+    <div id="row4">
+
+    </div>
+    <div id="row5">
+        <div id="icons">
+
+        </div>
+        <div id="rec_rep">
+            <div id="rec_icon">
+
+            </div>
+            <div id="rec_button">
+                추천
+            </div>
+            <div id="rep_icon">
+
+            </div>
+            <div id="rep_button">
+                신고
+            </div>
+        </div>
+    </div>
+</div>
+<link rel="stylesheet" href="{% static 'css/normalUserReviewReadTemplate.css' %}">
+<script>
+    window.onload = function()
+    {
+        let a = Array.from(document.getElementById('row3').children);
+        console.log(a[0].offsetHeight);
+        a.forEach(function (o) {
+            let b = o.offsetHeight / 16;
+            let c = o.offsetWidth - o.offsetHeight;
+            let d = o.innerText;
+            c = (c / d.length) / 16;
+            console.log(o);
+            if (b > c)
+                o.style.fontSize = c.toString() + 'rem';
+            else
+                o.style.fontSize = b.toString() + 'rem';
+        });
+        a=document.getElementById('rec_button');
+        b=(a.offsetHeight/16).toString()+'rem';
+        a.style.fontSize=b;
+        a=document.getElementById('rep_button');
+        b=(a.offsetHeight/16).toString()+'rem';
+        a.style.fontSize=b;
+    }
+</script>
+<br>
 {% endblock %}
