--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -1,5 +1,5 @@
 {% extends 'normal_user_base.html' %}
-{% load static %}
+{% load index static %}
 {% block main_contents %}
     <link rel="stylesheet" href="{% static 'css/normalUserReviewListTemplate.css' %}">
     {% block info %}
@@ -36,12 +36,12 @@
                             {% endif %}
                         </div>
                         <div class="review_icons">
-                            {% for icon in review.includedIcon %}
-                                <div class="icon">
-                                    <img src="{% static 'images/iconImage/' %}{{ icon }}" style="width:100%; height:100%;">
-{#                                    <a style="width:3.47%;height:4.04%;"></a>#}
-                                </div>
-                            {% endfor %}
+                            {% with icons=review.includedIcon %}
+                                {{icons|sets}}
+                                {% for icon in icons|sets %}
+                                    <img class="icon" src="{% static 'images/iconImage/' %}{{icon}}.png">
+                                {% endfor %}
+                            {% endwith %}
                         </div>
                     </div>
                 </div>
@@ -67,15 +67,12 @@
                 let k = document.getElementsByClassName('review_preview');
                 for (let i=0;i<k.length;i++){
                     let o = k[i];
-                    console.log(o);
                     a=o.offsetHeight/16;
                     let l=o.offsetWidth-o.offsetHeight;
                     let m = o.innerText;
                     let n = (l / m.length)/16;
-                    console.log(n)
                     if (a > n) {
                         o.style.fontSize = (Math.ceil(n*100)/100).toString() + 'rem';
-                        console.log((Math.ceil(n*100)/100).toString() + 'rem');
                     }
                     else
                         o.style.fontSize=a.toString()+'rem';
@@ -95,15 +92,12 @@
                 let k = document.getElementsByClassName('review_preview');
                 for (let i=0;i<k.length;i++){
                     let o = k[i];
-                    console.log(o);
                     a=o.offsetHeight/16;
                     let l=o.offsetWidth-o.offsetHeight;
                     let m = o.innerText;
                     let n = (l / m.length)/16;
-                    console.log(n)
                     if (a > n) {
                         o.style.fontSize = (Math.ceil(n*100)/100).toString() + 'rem';
-                        console.log((Math.ceil(n*100)/100).toString() + 'rem');
                     }
                     else
                         o.style.fontSize=a.toString()+'rem';
