--- a/templates/normal_user_review_list.html
+++ b/templates/normal_user_review_list.html
@@ -17,7 +17,7 @@
                             <img src="{% static 'images/' %}{{review.representiveImage}}.png">
                         {% else %}
                             {# 리뷰 대표 이미지 없을 경우 다른 이미지 출력 #}
-                            <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
+                            <img src="{% static 'images/iconImage/' %}no-photo.png" style="width:100%; height:100%;">
                         {% endif %}
                     </div>
                     <div class="review_info">
