--- a/templates/normal_user_room_read.html
+++ b/templates/normal_user_room_read.html
@@ -8,7 +8,7 @@
 <div id="reviewinfo" >
     <div style ="margin:20px;">
         <div style="width:24.7%; height:245px; margin-right:20px; display: inline-block;float:left;">
-                <img src="{% static 'images/' %}no-photo.png" style="width:100%; height:100%;">
+                <img src="{% static 'images/iconImage/' %}no-photo.png" style="width:100%; height:100%;">
         </div>
         <div id="mapDiv" style = "display:inline-block;"></div>
         <script type="text/javascript" src="{% static 'js/normalUserReviewReadTemplate.js' %}"></script>
