--- a/templates/normal_user_room_search.html
+++ b/templates/normal_user_room_search.html
@@ -61,7 +61,7 @@
                                 <img src="{% static 'images/' %}{{ roomImg }}">
                             {% endfor %}
                             {% else %}
-                                <img src="{% static 'images/no-photo.png' %}">
+                                <img src="{% static 'images/iconImage/no-photo.png' %}" style="width:100%; height:100%;">
                         {% endif %}
                     </div>
                     <div class="info">
