소개페이지:임시로 추가

--- a/templates/introduction.html
+++ b/templates/introduction.html
@@ -8,6 +8,6 @@
     <title>소개</title>
 </head>
 {% block main_contents %}
-    <h2>준비중입니다.</h2>
+    <img width="100%" src="{% static 'images/iconImage/intro.png' %}" alt="로고 이미지">
 {% endblock %}
 </html>
