--- a/templates/normal_user_review_read.html
+++ b/templates/normal_user_review_read.html
@@ -24,6 +24,7 @@
             });
         </script>
         <script type="text/javascript">
+        console.log('{{review.reviewWriter}}');
 
         // icon 이미지 <-> selected icon 이미지 변환 함수
         // 만들 예정
@@ -87,7 +88,11 @@
                         })
                     })
                 });
-            var icons = {{icons}}
+        {% if icons == None %}
+            var icons = null;
+        {% else %}
+            var icons = {{icons}};
+        {% endif %}
         </script>
     </div>
 </div>
