--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -66,7 +66,8 @@
 
 #address {
   border-left: 1px solid #B3B3B3;
-  text-align: left;
+  width: 40.32%;
+  text-align: right;
 }
 
 #room_read {
@@ -84,13 +85,14 @@
 #title {
   width: 100%;
   height: 100%;
+  font-weight: bolder;
   text-align: left;
 }
 
 #row3 {
   border-top: 1px solid #B3B3B3;
   border-bottom: 1px solid #B3B3B3;
-  height: 20px;
+  height: 6.11%;
   margin-bottom: 0.494%;
 }
 
