메인페이지 슬라이드 박스 수정

--- a/static/css/normalUserMainTemplate.scss
+++ b/static/css/normalUserMainTemplate.scss
@@ -3,7 +3,7 @@ div#rightSideMenu{
     display:none;
 }
 .slider>div{
-    height:34vh;
+    height:35vh;
     min-height:204px;
     margin-bottom:35px;
 }
@@ -13,4 +13,7 @@ div#rightSideMenu{
 
 .img{
     float:left;
+}
+.icon{
+    height:100%;
 }
