--- a/static/css/normalUserMainTemplate.css
+++ b/static/css/normalUserMainTemplate.css
@@ -3,7 +3,7 @@ div#rightSideMenu {
 }
 
 .slider > div {
-  height: 34vh;
+  height: 35vh;
   min-height: 204px;
   margin-bottom: 35px;
 }
@@ -14,6 +14,10 @@ div#rightSideMenu {
 
 .img {
   float: left;
+}
+
+.icon {
+  height: 100%;
 }
 
 /*# sourceMappingURL=normalUserMainTemplate.css.map */
