리뷰 삭제 구현

--- a/static/css/normalUserReviewReadTemplate.css
+++ b/static/css/normalUserReviewReadTemplate.css
@@ -65,8 +65,8 @@
 }
 
 #address {
-  border-left: 1px solid #B3B3B3;
-  width: 40.32%;
+  border-right: 1px solid #B3B3B3;
+  width: 40.12%;
   text-align: right;
 }
 
