--- a/static/css/normalUserReviewReadTemplate.scss
+++ b/static/css/normalUserReviewReadTemplate.scss
@@ -54,8 +54,8 @@
     text-align:left;
 }
 #address{
-    border-left:1px solid #B3B3B3;
-    width:40.32%;
+    border-right:1px solid #B3B3B3;
+    width:40.12%;
     text-align:right;
 }
 #room_read{
